--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,13 @@
     <head>
         <title>Plan Pacific Construction | Projects</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/png" href="images/flavicon/PPC_Favicon_Orange.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="images/flavicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/flavicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/flavicon/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#2b5797">
+        <meta name="theme-color" content="#ffffff">
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/projects/mobile.css">
         <link rel="stylesheet" href="css/projects/landscape.css">
@@ -16,7 +22,7 @@
                 <div id="hamburger-menu"><img src="images/icons/Hamburger-Menu.png" id="menu"></div>
             </div>
             <div class = "logo-container">
-                <div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div>
+                <a href=index.html><div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div></a>
             </div>
             <div class="line-desktop"></div>
             <div class ="menu-container">
@@ -59,9 +65,8 @@
         <div id="line"></div>
         <footer>
             <div id="contact-info">
-                <div id="name">Jerry Wong</div>
+                <a href="tel:6047007499"><div id="phone-number">604-700-7499</div></a>
                 <div id="e-mail">planpacificconstruction@gmail.com</div>
-                <div id="phone-number">604-700-7499</div>
             </div>
             <div id="social-media">
                 <div id="social-icons">
