new header and homepage

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <div class="line3"></div>
                         </div>
                         <div class = "logo-container">
-                            <a href=index.html><div class="logo"><img src="images/logo/PPC_White_Orange.png"></div></a>
+                            <a href=index.html><div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div></a>
                         </div>
                     </div>
                     <ul class="nav">
@@ -70,27 +70,44 @@
             </div>
             <div id="submit">
                 <div id="submit-button">
-                    <div class="halfCircleLeft" onmouse><a href="contact.html"></a></div>
-                    <div class="rectangle">
-                        <div class="request-container">
-                            <a href="contact.html">request<br>quote</a>
-                        </div>
-                    </div>
-                    <div class="halfCircleRight"><a href="contact.html"></a></div>
+                    <div class="request-container">
+                        <a href="contact.html">request<br>quote</a>
+                    </div>      
                 </div>
             </div>
             <div id="downward-arrow">
                 <a class="go-about-us" href="#about-us-container">&#8964</a>
             </div>
-            <div id="about-us-container">
-                <div>About Us</div>
-                <span class="line"></span>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condimentum fringilla vulputate. 
-                    Vestibulum sagittis a justo et pulvinar. Phasellus id tellus urna. Proin vel nisl enim. Aliquam non massa lectus. 
-                    Pellentesque vel convallis orci, in pellentesque leo. 
-                    Vivamus vulputate nisl sem, eget faucibus nunc luctus ut. Curabitur tempus dui eros, ac accumsan ex cursus ut.
-                </p>
+            <div class="desktop-container-about">
+                <div id="about-us-container">
+                    <div>About Us</div>
+                    <span class="line"></span>
+                    <p>
+                        We offer such a wide range of services because we believe that homeowners should not have to go searching for a new contractor every time they want to improve their home. We’ve built a loyal customer base by providing them with literal top to bottom service: from roof to foundation. Each service we offer is performed by highly skilled, deeply experienced contractors using the highest quality materials available. Whether big or small, every project is treated with the same level of professionalism.
+                    </p>
+                </div>
+                <div class="icon-container">
+                    <div class="icon-sentence">
+                        <img src="images/icons/icon-one-to-one-white.png">
+                        <p>You get a personal one-on-one consultation with an experienced expert</p>
+                    </div>
+                    <div class="icon-sentence">
+                        <img src="images/icons/time-white.png">
+                        <p>You will recieve prompt responses on any questions and concerns you may have. You can expect your project to be done within the quoted timeframe.</p>
+                    </div>
+                    <div class="icon-sentence">
+                        <img src="images/icons/design-white.png">
+                        <p>You will be informed about everything from design concepts to construction details, our expertise will guide you to make about your projects that provide the most benefit.</p>
+                    </div>
+                    <div class="icon-sentence">
+                        <img src="images/icons/materials-white.png">
+                        <p>Your project will be built with high quality materials from our trusted suppliers</p>
+                    </div>
+                    <div class="icon-sentence">
+                        <img src="images/icons/icon-study-trends-white.png">
+                        <p>Your project will conform to the latest trends and standards because we are always working hard by keeping up-to-date on design, construction trends, techniques, tools and material.</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="line"></div>
