--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
             <!--<div class ="head-container">
                 <div id="hamburger-menu"><img src="images/icons/Hamburger-Menu.png" id="menu"></div>
             </div>-->
-
-            <div class="line-desktop"></div>
             <div class ="menu-container">
                 <nav>
                     <div class="burger-logo-container">
@@ -45,29 +43,28 @@
                 </nav>
             </div>
         </header>
-        <div class="line-desktop"></div>
         <!-- slideshow image carousel -->
-        <div class="desktop-container">
-            <div class="carousel-container">
-                <div class="slideshow-container">
-                    <div class ="slide fade">
-                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
-                    </div>
-                    <div class="slide fade">
-                        <img src="images/home/bathroom-reno.jpg">
-                    </div>
-                    <div class="slide fade">
-                        <img src="images/home/exterior-finishing.jpg">
-                    </div>
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <div class="carousel-container">
+            <div class="slideshow-container">
+                <div class ="slide fade">
+                    <img src="images/home/basement1.jpg">
                 </div>
-                <div class="dot-container">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
+                <div class="slide fade">
+                    <img src="images/home/bathroom-1.jpg">
                 </div>
+                <div class="slide fade">
+                    <img src="images/home/bedroom-1.jpg">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
+            <div class="dot-container">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </div>
+        <div class="desktop-container">
             <div id="submit">
                 <div id="submit-button">
                     <div class="request-container">
