services page complete

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
                     <div>About Us</div>
                     <span class="line"></span>
                     <p>
-                        We offer such a wide range of services because we believe that homeowners should not have to go searching for a new contractor every time they want to improve their home. 
-                        We’ve built a loyal customer base by providing them with literal top to bottom service: from roof to foundation. Each service we offer is performed by highly skilled, deeply experienced contractors using the highest quality materials available. 
-                        Whether big or small, every project is treated with the same level of professionalism.
+                        We are a construction company based in Vancouver that specialize in home remodeling and renovations. 
+                        Our team provides excellent customer service in listening to clients specific needs and wants, as well as providing excellent craftsmanship performed with the highest quality materials available. 
+                        From the day of our first consultation to the moment we leave your property, we work closely with you, keeping an open dialogue about your project. This ensures that the work we do not only meets your expectations, it exceeds them.
+                        Whether it’s that little job you can never seem to find time for, or that huge bathroom renovation you’ve been dreaming of, we can assist you with all the planning, design, and construction of your next remodeling project.
                     </p>
                 </div>
                 <div class="icon-container">
@@ -118,10 +119,10 @@
             <div id="social-media">
                 <div id="social-icons">
                     <a href="TBD">
-                        <img class="facebook" src="images/icons/facebook-icon.png">
+                        <img class="facebook" src="images/icons/facebook-icon-white.png">
                     </a>
                     <a href="https://www.instagram.com/planpacificconstruction/">
-                        <img class="instagram" src="images/icons/instagram-icon.png">
+                        <img class="instagram" src="images/icons/instagram-icon-white.png">
                     </a>
                 </div>
             </div>
