--- a/services.html
+++ b/services.html
@@ -18,41 +18,43 @@
     </head>
     <body>
         <header>
-            <div class ="head-container">
-                <div id="hamburger-menu"><img src="images/icons/Hamburger-Menu.png" id="menu"></div>
-            </div>
-            <div class = "logo-container">
-                <a href=index.html><div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div></a>
-            </div>
-            <div class="line-desktop"></div>
             <div class ="menu-container">
-                <nav class="nav">
-                    <ul>
+                <nav>
+                    <div class="burger-logo-container">
+                        <div class="burger">
+                            <div class="line1"></div>
+                            <div class="line2"></div>
+                            <div class="line3"></div>
+                        </div>
+                        <div class = "logo-container">
+                            <a href=index.html><div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div></a>
+                        </div>
+                    </div>
+                    <ul class="nav">
                         <li class="menu-border"><a href="index.html">Home</a></li>
-                        <li class="menu-border"><a href="services.html"><p class="active">Services</p></a></li>
+                        <li class="menu-border"><a href="services.html"><p class ="active">Services</p></a></li>
                         <li class="menu-border"><a href="projects.html">Projects</a></li>
                         <li class="menu-border"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="line-desktop"></div>
         </header>
         <div class="container-title">
             <div class="line desktop-line"></div>
-            <h3>Interior</h3>
+            <h3>Basement Remodeling</h3>
             <div class="line"></div>
         </div>
         <div class="container left">
             <div class="carousel-container">
                 <div class="slideshow-container">
                     <div class ="slide fade slides">
-                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
+                        <img src="images/services/Basement1.jpg">
                     </div>
                     <div class="slide fade slides">
-                        <img src="images/home/bathroom-reno.jpg">
+                        <img src="images/services/Basement2.jpg">
                     </div>
                     <div class="slide fade slides">
-                        <img src="images/home/exterior-finishing.jpg">
+                        <img src="images/services/Basement3.jpg">
                     </div>
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -64,27 +66,28 @@
                 </div>                
             </div>
             <p class="description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Often overlooked and neglected, a typical basement takes up more than 40% of your home’s overall space. 
+                Which is why it’s one of the most important parts in your home to look great and be fully functional. 
+                Whether you want to enjoy it as a full experience entertainment room, or eventually rent it out for rental income, 
+                a finished basement will surely increase the overall value of any property.
             </p> 
         </div>
         <div class="container-title">
             <div class="line desktop-line"></div>
-            <h3>Exterior</h3>
+            <h3>Kitchen Remodeling</h3>
             <div class="line"></div>
         </div>
         <div class="container right">
             <div class="carousel-container">
                 <div class="slideshow-container">
                     <div class ="slide1 fade slides">
-                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
+                        <img src="images/services/kitchen1.jpg">
                     </div>
                     <div class="slide1 fade slides">
-                        <img src="images/home/bathroom-reno.jpg">
+                        <img src="images/services/kitchen2.jpg">
                     </div>
                     <div class="slide1 fade slides">
-                        <img src="images/home/exterior-finishing.jpg">
+                        <img src="images/services/kitchen3.jpg">
                     </div>
                     <a class="prev" onclick="plusSlides1(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides1(1)">&#10095;</a>
@@ -96,27 +99,28 @@
                 </div>            
             </div>
             <p class="description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                It’s the heart and soul of any home. The center of food preparation and hospitality,  it should be the most inviting room in the house. 
+                Turning a lacklustre afterthought of a kitchen into a modern, open concept gathering space showcases your design flair and personality without having to compromise on functionality. 
+                With clever use of counter space, cupboard space, as well as ample flooring, your kitchen can accommodate all of your entertainment and personal needs. 
+                Afterall, the party always ends up in the kitchen.
             </p> 
         </div>
         <div class="container-title">
             <div class="line desktop-line"></div>
-            <h3>Other</h3>
+            <h3>Bathroom Remodeling</h3>
             <div class="line"></div>
         </div>
         <div class="container left">
             <div class="carousel-container">
                 <div class="slideshow-container">
                     <div class ="slide2 fade slides">
-                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
+                        <img src="images/services/bathroom1.jpg">
                     </div>
                     <div class="slide2 fade slides">
-                        <img src="images/home/bathroom-reno.jpg">
+                        <img src="images/services/bathroom2.jpg">
                     </div>
                     <div class="slide2 fade slides">
-                        <img src="images/home/exterior-finishing.jpg">
+                        <img src="images/services/bathroom3.jpg">
                     </div>
                     <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides2(1)">&#10095;</a>
@@ -128,20 +132,119 @@
                 </div>            
             </div>
             <p class="description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                A newly renovated bathroom can create a statement piece, or a calming sanctuary. 
+                There are an endless amount of options to make your bathroom feel tranquil, elegant, or sleek depending on your personal taste. 
+                From flooring to showers, and sinks to tubs, our construction experts will work alongside you to create a design plan with your existing space and budget.
             </p>           
         </div>
+        <div class="container-title">
+            <div class="line desktop-line"></div>
+            <h3>Patio/Deck/Fence</h3>
+            <div class="line"></div>
+        </div>
+        <div class="container right">
+            <div class="carousel-container">
+                <div class="slideshow-container">
+                    <div class ="slide3 fade slides">
+                        <img src="images/services/carpentry1.jpg">
+                    </div>
+                    <div class="slide3 fade slides">
+                        <img src="images/services/carpentry2.jpg">
+                    </div>
+                    <div class="slide3 fade slides">
+                        <img src="images/services/carpentry3.jpg">
+                    </div>
+                    <a class="prev" onclick="plusSlides3(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides3(1)">&#10095;</a>
+                </div>
+                <div class="dot-container">
+                    <span class="dot3 dots" onclick="currentSlide3(1)"></span>
+                    <span class="dot3 dots" onclick="currentSlide3(2)"></span>
+                    <span class="dot3 dots" onclick="currentSlide3(3)"></span>
+                </div>            
+            </div>
+            <p class="description">
+                An outdoor space is your home away from home. Your retreat, your playground, your outdoor home..., or at least it can be. A revamped balcony or terrace will add the style and charm needed to convert this space into a beautiful oasis. 
+                From a zen garden filled with a harmonious blend of architectural elements, plants and water, to a simple pergola to hide from the sun’s summer rays, we can design and create your perfect outdoor space. 
+                We also perform installations of decks and fences of all shapes and sizes so you can enjoy more of your home.
+            </p> 
+        </div>
+        <div class="container-title">
+            <div class="line desktop-line"></div>
+            <h3>Living Space/Entertainment Room/Den</h3>
+            <div class="line"></div>
+        </div>
+        <div class="container left">
+            <div class="carousel-container">
+                <div class="slideshow-container">
+                    <div class ="slide4 fade slides">
+                        <img src="images/services/living1.jpg">
+                    </div>
+                    <div class="slide4 fade slides">
+                        <img src="images/services/living2.jpg">
+                    </div>
+                    <div class="slide4 fade slides">
+                        <img src="images/services/living3.jpg">
+                    </div>
+                    <a class="prev" onclick="plusSlides4(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides4(1)">&#10095;</a>
+                </div>
+                <div class="dot-container">
+                    <span class="dot4 dots" onclick="currentSlide4(1)"></span>
+                    <span class="dot4 dots" onclick="currentSlide4(2)"></span>
+                    <span class="dot4 dots" onclick="currentSlide4(3)"></span>
+                </div>            
+            </div>
+            <p class="description">
+                These rooms are an important part of both family time and entertaining. 
+                Whether you want them designed for regular day to day use, or as a more hands off area for special occasions, we can plan accordingly.
+            </p>           
+        </div>
+        <div class="container-title">
+            <div class="line desktop-line"></div>
+            <h3>Other</h3>
+            <div class="line"></div>
+        </div>
+        <div class="container right">
+            <div class="carousel-container">
+                <div class="slideshow-container">
+                    <div class ="slide5 fade slides">
+                        <img src="images/home/25-Special-Edition-Modern-House-Design-for-your-2020-Architectural-Inspiration-25.jpg">
+                    </div>
+                    <div class="slide5 fade slides">
+                        <img src="images/home/bathroom-reno.jpg">
+                    </div>
+                    <div class="slide5 fade slides">
+                        <img src="images/home/exterior-finishing.jpg">
+                    </div>
+                    <a class="prev" onclick="plusSlides5(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides5(1)">&#10095;</a>
+                </div>
+                <div class="dot-container">
+                    <span class="dot5 dots" onclick="currentSlide5(1)"></span>
+                    <span class="dot5 dots" onclick="currentSlide5(2)"></span>
+                    <span class="dot5 dots" onclick="currentSlide5(3)"></span>
+                </div>            
+            </div>
+            <div class="other-container">
+                <p>We also provide handyman services including:</p>
+                    <ul>
+                        <li>dry wall repair</li>
+                        <li>painting & staining</li>
+                        <li>deck & fence maintenance</li>
+                        <li>tv mounting</li>
+                        <li>flooring</li>
+                        <li>door & window installation</li>
+                    </ul>
+                <p>For all other services not mentioned, please contact us for a free in house consultation.</p>      
+            </div>    
+        </div>
+        
         <div id="submit">
             <div id="submit-button">
-                <div class="halfCircleLeft" onmouse><a href="contact.html"></a></div>
-                <div class="rectangle">
-                    <div class="request-container">
-                        <a href="contact.html">request<br>quote</a>
-                    </div>
-                </div>
-                <div class="halfCircleRight"><a href="contact.html"></a></div>
+                <div class="request-container">
+                    <a href="contact.html">request<br>quote</a>
+                </div>      
             </div>
         </div>
         <div id="line"></div>
@@ -153,10 +256,10 @@
             <div id="social-media">
                 <div id="social-icons">
                     <a href="TBD">
-                        <img class="facebook" src="images/icons/facebook-icon.png">
+                        <img class="facebook" src="images/icons/facebook-icon-white.png">
                     </a>
                     <a href="https://www.instagram.com/planpacificconstruction/">
-                        <img class="instagram" src="images/icons/instagram-icon.png">
+                        <img class="instagram" src="images/icons/instagram-icon-white.png">
                     </a>
                 </div>
             </div>
