removed projects and restyled contacts page

--- a/contact.html
+++ b/contact.html
@@ -18,26 +18,43 @@
     </head>
     <body>
         <header>
-            <div class ="head-container">
-                <div id="hamburger-menu"><img src="images/icons/Hamburger-Menu.png" id="menu"></div>
-            </div>
-            <div class = "logo-container">
-                <a href=index.html><div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div></a>
-            </div>
-            <div class="line-desktop"></div>
             <div class ="menu-container">
-                <nav class="nav">
-                    <ul>
+                <nav>
+                    <div class="burger-logo-container">
+                        <div class="burger">
+                            <div class="line1"></div>
+                            <div class="line2"></div>
+                            <div class="line3"></div>
+                        </div>
+                        <div class = "logo-container">
+                            <a href=index.html><div class="logo"><img src="images/logo/PPC_Alternate_White_Orange.png"></div></a>
+                        </div>
+                    </div>
+                    <ul class="nav">
                         <li class="menu-border"><a href="index.html">Home</a></li>
                         <li class="menu-border"><a href="services.html">Services</a></li>
-                        <li class="menu-border"><a href="projects.html">Projects</a></li>
-                        <li class="menu-border"><a href="contact.html"><p class="active">Contact</p></a></li>
+                        <li class="menu-border"><a href="contact.html"><p class ="active">Contact</p></a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="line-desktop"></div>
         </header>
         <div class="line"></div>
+
+        <div class="contact-icons-container">
+            <div class="contact-icon">
+                <a href="tel:6047007499"><img src="images/icons/text-contact.png"></a>
+                <p>Give us a call or text at <a href="tel:6047007499">604-700-7499!</a></p>
+            </div>
+            <div class="contact-icon">
+                <a href="#contact-form"><img src="images/icons/form-contact.png"></a>
+                <p>Fill out the contact form below and we will contact you!</p>
+            </div>
+            <div class="contact-icon">
+                <a href="mailto:planpacificconstruction@gmail.com"><img src="images/icons/email-contact.png"></a>
+                <p>Give us an email at <a href="mailto:planpacificconstruction@gmail.com">planpacificconstruction@gmail.com</a></p>
+            </div>
+        </div>
+
         <div id="contact-container">
             <form id="contact-form">
                 <fieldset>
@@ -69,6 +86,7 @@
                                 <option value="Bathroom">Bathroom</option>
                                 <option value="Basement">Basement</option>
                                 <option value="Bedroom">Bedroom</option>
+                                <option value="Handyman">Bedroom</option>
                                 <option value="Other">Other (Please indicate in message)</option>
                             </select>
                             <img src=images/icons/down-arrow.png>
@@ -104,16 +122,16 @@
         <div class="line"></div>
         <footer>
             <div id="contact-info">
-                <a href="tel:6047007499">604-700-7499</a>
+                <a href="tel:6047007499"><div id="phone-number">604-700-7499</div></a>
                 <div id="e-mail">planpacificconstruction@gmail.com</div>
             </div>
             <div id="social-media">
                 <div id="social-icons">
                     <a href="TBD">
-                        <img class="facebook" src="images/icons/facebook-icon.png">
+                        <img class="facebook" src="images/icons/facebook-icon-white.png">
                     </a>
                     <a href="https://www.instagram.com/planpacificconstruction/">
-                        <img class="instagram" src="images/icons/instagram-icon.png">
+                        <img class="instagram" src="images/icons/instagram-icon-white.png">
                     </a>
                 </div>
             </div>
