--- a/services.html
+++ b/services.html
@@ -242,7 +242,7 @@
         <div id="submit">
             <div id="submit-button">
                 <div class="request-container">
-                    <a href="contact.html">request<br>quote</a>
+                    <a href="contact.html"><button>request<br>quote</button></a>
                 </div>      
             </div>
         </div>
